<!--
  ~ Copyright (C) 2018 Wouter Dullaert
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<resources>
    <string name="app_name" translatable="false">vPlayer</string>
    <string name="browse_title" translatable="false">vPlayer</string>
    <string name="account_settings">Account</string>
    <string name="settings">Settings</string>
    <string name="play_video_1">Play movie</string>
    <string name="default_playlist_title">Spotlight</string>

    <string name="pref_username_key" translatable="false">pref_username</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_password_key" translatable="false">pref_password</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_login_key" translatable="false">pref_login</string>
    <string name="pref_login_title">VRT Account</string>
    <string name="pref_cookie_key" translatable="false">pref_cookie</string>
    <string name="pref_default_channel_id_key" translatable="false">pref_default_channel_id</string>
    <string name="pref_enable_recommendations_key" translatable="false">pref_enable_recommendations</string>
    <string name="pref_enable_recommendations_title">Show recommendations</string>
    <string name="pref_enable_recommendations_summary_on">Recommendations will be shown on the homesreen</string>
    <string name="pref_enable_recommendations_summary_off">No recommendations will be shown on the homesreen</string>
    <string name="authentication_screen_title">Manage VRT NU Credentials</string>
    <string name="authentication_screen_description">Please enter your VRT NU username and password</string>
    <string name="pref_action_login">Login</string>
    <string name="pref_action_logout">Logout</string>
    <string name="pref_action_refresh">Refresh Login</string>
    <string name="search_results">Search results for</string>
    <string name="default_account_name">Anonymous</string>

    <!-- Global search related text -->
    <string name="search_hint">Just Type</string>
    <string name="search_description">Search through currently available VRT NU content</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="parse_category_error">Failed to parse categories</string>
    <string name="parse_live_video_error">Failed to parse live video data</string>
    <string name="authorization_error">Login to VRT NU is not valid</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <!-- Toast messages -->
    <string name="toast_login_successful">Congratulations, login to VRT NU was successful!</string>
    <string name="toast_logout_successful">Account information for VRT NU has been removed</string>
</resources>
