<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Wouter Dullaert
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/pref_login_key"
        android:title="@string/pref_login_title" />
    <SwitchPreference
        android:key="@string/pref_enable_recommendations_key"
        android:title="@string/pref_enable_recommendations_title"
        android:summaryOn="@string/pref_enable_recommendations_summary_on"
        android:summaryOff="@string/pref_enable_recommendations_summary_off"
        android:defaultValue="true" />
</PreferenceScreen>