<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Wouter Dullaert
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:hint="@string/search_hint"
    android:includeInGlobalSearch="true"
    android:label="@string/app_name"
    android:icon="@drawable/lb_ic_in_app_search"
    android:searchSettingsDescription="@string/search_description"
    android:searchSuggestAuthority="com.wdullaer.vplayer"
    android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://com.wdullaer.vplayer/video"
    android:queryAfterZeroResults="true"
    android:searchSuggestPath="search"
    android:searchSuggestSelection=" ?"
    android:searchSuggestThreshold="1" />

